namespace java com.moseeker.thrift.gen.dao.struct.userdb
namespace py thrift_gen.gen.dao.struct.userdb

struct UserEmployeePointsRecordCompanyRelDO {

	1: optional i32 id,	//null
	2: optional i32 companyId,	//公司ID
	3: optional i32 employeePointsRecordId,	//员工积分记录表ID
	4: optional string createTime,	//null
	5: optional string updateTime	//null

}
